# yolov8-pcb-detection

./: LICENSE  README.md  config.yaml  pyproject.toml
data/one-board-dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
data/one-board-dataset-tiled/train/: labels.cache
data/one-board-dataset-tiled/valid/: labels.cache
one-board-dataset-tiled/test/labels/: 12_jpg.rf.1bbbe529a4fdc0f853233843fc7f54fc_0.txt
one-board-dataset-tiled/train/labels/: 15_jpg.rf.6cc925a70047509c9a04efb1a4346f0f_0.txt  1_jpg.rf.b547df7924f8ebf39384310c4db36d9f_1.txt  1_jpg.rf.b547df7924f8ebf39384310c4db36d9f_3.txt  20_jpg.rf.3f5345fa846c0772833e86a2d35a1aef_0.txt  22_jpg.rf.3dc00ed075f5938db68a0ccb546aef5c_2.txt  23_jpg.rf.8cdf406a05f23c8f8aa32c186c944f2d_0.txt  25_jpg.rf.a3e710ac3b8c83fbef951e7a64881c94_0.txt  26_jpg.rf.e5502e32e772a9d89dda0bf57e5ef9d5_0.txt  2_jpg.rf.77d5b77198e1cc8d5052121a854c06fe_1.txt  2_jpg.rf.77d5b77198e1cc8d5052121a854c06fe_15.txt  2_jpg.rf.77d5b77198e1cc8d5052121a854c06fe_16.txt  2_jpg.rf.77d5b77198e1cc8d5052121a854c06fe_17.txt  2_jpg.rf.77d5b77198e1cc8d5052121a854c06fe_19.txt  3_jpg.rf.e99bd7b2deab23bfd20d58188a211c54_14.txt  3_jpg.rf.e99bd7b2deab23bfd20d58188a211c54_15.txt  3_jpg.rf.e99bd7b2deab23bfd20d58188a211c54_7.txt  5new_jpg.rf.e99787c0eb1b9a71b2dd85098cb944a1_11.txt  5new_jpg.rf.e99787c0eb1b9a71b2dd85098cb944a1_13.txt  7_jpg.rf.109498113934175d1532e8880c4dd729_2.txt  (+3 more)
scripts/: convert_to_rknn.py  debug-rknn.py  export_onxx.py  rknn-detect.py
src/: config.py
src/data/: download.py  tile.py
src/inference/: detect.py
src/training/: train.py
(+147 files in other folders)
